# project_template

./: .gitignore  .gitmodules  CMakeLists.txt
include/: cmake_execution.hpp  default_project.hpp  file.hpp  folder.hpp  sym_link.hpp  template_files.hpp
include/project_template/: cmake_execution.hpp  default_project.hpp  portability_filesystem.hpp
src/: CMakeLists.txt  cmake_execution.cpp  default_project.cpp  file.cpp  folder.cpp  main.cpp  sym_link.cpp  template_files.cpp
src/templates/: .clang-format.inc  .dir-locals.el.inc  .projectile.inc  CMakeLists_root.txt.inc  CMakeLists_src.txt.inc  main.cpp.inc
